Fix the problem of cursor color in dark mode. #565

--- a/src/renderer/components/Editor/HostsEditor.less
+++ b/src/renderer/components/Editor/HostsEditor.less
@@ -69,6 +69,16 @@
   }
 }
 
+:global(.theme-dark) {
+  .editor {
+    :global {
+      .CodeMirror-cursor {
+        border-color: #39c;
+      }
+    }
+  }
+}
+
 .status_bar {
   height: var(--swh-status-bar-height);
   line-height: var(--swh-status-bar-height);
